Signed-off-by: rajat14323 <rajatkumarbind@gmail.com>

--- a/MovieRecomendationSystem.ipynb
+++ b/MovieRecomendationSystem.ipynb
@@ -339,8 +339,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "##Step 3: Create a column in DF which combines all selected features\n",
+    "# Create a column in DF which combines all selected features\n",
     "\n",
+    "# Here we are filling all the NaN values with empty string\n",
     "for feature in features:\n",
     "\tdf[feature] = df[feature].fillna('')\n",
     "\n",
@@ -348,7 +349,7 @@
     "\ttry:\n",
     "\t\treturn row['keywords'] +\" \"+row['cast']+\" \"+row[\"genres\"]+\" \"+row[\"director\"]\n",
     "\texcept:\n",
-    "\t\tprint (\"Error:\", row)"
+    "\t\tprint (\"Error:\", row)        #If there is some errror "
    ]
   },
   {
