--- a/MovieRecomendationSystem.ipynb
+++ b/MovieRecomendationSystem.ipynb
@@ -365,7 +365,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#asis = 1 means columnwise\n",
+    "#axi = 1 or ‘columns’: apply function to each row.\n",
     "df[\"combined_features\"] = df.apply(combine_features,axis=1)   #Pandas.apply allow the users to pass a function and apply it \n",
     "                                                               #on every single value of the Pandas series.\n",
     "                                                        "
